[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/buttons/menu_button.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/menus/pause_menu.gd" type="Script" id=2]
[ext_resource path="res://assets/ui/EquipmentPro.tres" type="DynamicFont" id=3]

[node name="pause_menu" type="VBoxContainer"]
margin_left = 224.0
margin_top = 199.0
margin_right = 376.0
margin_bottom = 401.0
custom_constants/separation = 60
script = ExtResource( 2 )

[node name="continue_button" parent="." instance=ExtResource( 1 )]
unique_name_in_owner = true
margin_right = 152.0
margin_bottom = 38.0
text = "Continue"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_top = 98.0
margin_right = 152.0
margin_bottom = 202.0

[node name="options_button" parent="VBoxContainer" instance=ExtResource( 1 )]
unique_name_in_owner = true
margin_right = 152.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 3 )
text = "Options"

[node name="exit_to_menu_button" parent="VBoxContainer" instance=ExtResource( 1 )]
unique_name_in_owner = true
margin_top = 36.0
margin_right = 152.0
margin_bottom = 68.0
custom_fonts/font = ExtResource( 3 )
text = "Exit to menu"

[node name="exit_button" parent="VBoxContainer" instance=ExtResource( 1 )]
unique_name_in_owner = true
margin_top = 72.0
margin_right = 152.0
margin_bottom = 104.0
custom_fonts/font = ExtResource( 3 )
text = "Exit game"
